--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>{{ site.title }}</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
