--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ h2, h3 {
 }
 
 /* small screens */
-@media (max-width: 768px) {
+@media (max-width: 768px) and (orientation: portrait) {
 
 	body {
                 flex-direction: column;
